fix navbar collapse bug

--- a/styles/pace.scss
+++ b/styles/pace.scss
@@ -1,13 +1,14 @@
-body > :not(.pace),body:before,body:after {
-  -webkit-transition:opacity .5s ease-in-out;
-  -moz-transition:opacity .5s ease-in-out;
-  -o-transition:opacity .5s ease-in-out;
-  -ms-transition:opacity .5s ease-in-out;
-  transition:opacity .5s ease-in-out;
-}
-
-body:not(.pace-done) > :not(.pace),body:not(.pace-done):before,body:not(.pace-done):after {
-  opacity:0;
+.pace-done {
+  nav, section {
+    opacity: 1;
+  }
+  section {
+    -webkit-transition:opacity .5s ease-in-out;
+    -moz-transition:opacity .5s ease-in-out;
+    -o-transition:opacity .5s ease-in-out;
+    -ms-transition:opacity .5s ease-in-out;
+    transition:opacity .5s ease-in-out;
+  }
 }
 
 .pace {
